fix: hamburger menu lis not showing up

--- a/dolphinResidence/src/components/HamburgerMenu/HamburgerMenu.css
+++ b/dolphinResidence/src/components/HamburgerMenu/HamburgerMenu.css
@@ -13,6 +13,7 @@
   opacity: 0;
   visibility: hidden;
   transition: all 0.4s ease-in-out;
+  color: white;
 }
 
 .off-screen-menu.active {
@@ -21,9 +22,9 @@
   visibility: visible;
 }
 
-.off-screen-menu .links {
-  list-style-type: none;
+.off-screen-menu .off-screen-links {
   display: flex;
+  list-style-type: none;
   flex-direction: column;
   gap: 1rem;
 }
